fix: removed center alignment for images

--- a/client/src/app/views/about/TeamSection.scss
+++ b/client/src/app/views/about/TeamSection.scss
@@ -11,7 +11,6 @@
 .team-grid {
   display: grid;
   grid-gap: 20px;
-  justify-items: center;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 
